@@ -2,6 +2,7 @@
 
 S3method(arrange_,plotly)
 S3method(distinct_,plotly)
+S3method(filter_,plotly)
 S3method(geom2trace,GeomBar)
 S3method(geom2trace,GeomBlank)
 S3method(geom2trace,GeomBoxplot)
@@ -16,12 +17,18 @@ S3method(geom2trace,default)
 S3method(ggplotly,ggmatrix)
 S3method(ggplotly,ggplot)
 S3method(group_by_,plotly)
+S3method(groups,plotly)
 S3method(layout,matrix)
 S3method(layout,plotly)
+S3method(mutate_,plotly)
 S3method(plotly_build,gg)
 S3method(plotly_build,list)
 S3method(plotly_build,plotly)
 S3method(print,plotly_figure)
+S3method(rename_,plotly)
+S3method(select_,plotly)
+S3method(slice_,plotly)
+S3method(summarise_,plotly)
 S3method(to_basic,GeomAbline)
 S3method(to_basic,GeomArea)
 S3method(to_basic,GeomBoxplot)
@@ -47,10 +54,13 @@ S3method(to_basic,GeomTile)
 S3method(to_basic,GeomViolin)
 S3method(to_basic,GeomVline)
 S3method(to_basic,default)
+S3method(transmute_,plotly)
+S3method(ungroup,plotly)
 export("%>%")
 export(add_data)
 export(add_lines)
 export(add_markers)
+export(add_paths)
 export(add_polygons)
 export(add_ribbons)
 export(add_text)
@@ -60,16 +70,13 @@ export(config)
 export(embed_notebook)
 export(event_data)
 export(export)
-export(filter_.plotly)
 export(geom2trace)
 export(get_figure)
 export(gg2list)
 export(ggplotly)
 export(group_by)
-export(groups.plotly)
 export(knit_print.plotly_figure)
 export(layout)
-export(mutate_.plotly)
 export(offline)
 export(plot_ly)
 export(plotly)
@@ -80,20 +87,14 @@ export(plotly_build)
 export(plotly_data)
 export(plotly_empty)
 export(plotly_json)
-export(rename_.plotly)
 export(renderPlotly)
 export(schema)
-export(select_.plotly)
 export(signup)
-export(slice_.plotly)
 export(style)
 export(subplot)
-export(summarise_.plotly)
 export(toRGB)
 export(toWebGL)
 export(to_basic)
-export(transmute_.plotly)
-export(ungroup.plotly)
 import(ggplot2)
 importFrom(base64enc,base64encode)
 importFrom(dplyr,arrange_)
