@@ -1,0 +1,12 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/add.R
+\name{add_paths}
+\alias{add_paths}
+\title{Add paths to a plotly vis}
+\usage{
+add_paths(p, ...)
+}
+\description{
+Add paths to a plotly vis
+}
+
